--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Server 
 server.port=8080
+
+# Flyway 
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
